--- a/src/components/Roadmap.css
+++ b/src/components/Roadmap.css
@@ -1,13 +1,24 @@
 .timeline-area {
     margin: 90px auto;
     width: 500px;
-    border-left: 2px solid red;
-    padding: 0 20px;
+    border-left: 2px solid #68F588;
+    padding: 0 40px;
 }
 
 .timeline-event {
-    background-color: black;
+    background-color: #2c3137;
+    box-shadow: 0 24px 50px 0 rgba(0, 0, 0, 0.5);
+    border-radius: 16px;
+    margin-bottom: 72px;
+    height: 260px;
     position: relative;
+}
+
+.timeline-event p {
+    margin: 0;
+    padding: 25px 32px 33px 33px;
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .timeline-event:before {
@@ -16,11 +27,11 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background-color: red;
-    border: 3px solid green;
+    background-color: #68f588;
+    border: 3px solid  #68f588;
     position: absolute;
-    top: 10px;
-    left: -40px;
+    top: 30px;
+    left: -49px;
 }
 
 .timeline-event:after {
@@ -28,9 +39,21 @@
     width: 0;
     height: 0;
     border-style: solid;
-    border-color: transparent red transparent transparent;
+    border-color: transparent #2c3137 transparent transparent;
     border-width: 15px;
     position: absolute;
-    left: -17px;
-    top: px;
+    left: -29px;
+    top: 24px;
+}
+
+.map-date {
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 7px;
+}
+
+.map-h3 {
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 16px;
 }
