--- a/src/components/EditProfile.css
+++ b/src/components/EditProfile.css
@@ -1,5 +1,10 @@
 .editProfile-container {
     margin-top: 5px;
+    padding-top: 34px;
+    padding-bottom: 58px;
+    padding-left: 34px;
+    border-radius: 24px;
+    background-color: #2c3137;
 }
 
 .editprifile-navigation {
@@ -32,6 +37,19 @@
     width: 80px;
 }
 
+.editProfile-input {
+    padding: 16px;
+    border-radius: 8px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+    outline: none;
+    border: solid 1px #474d57;
+    background-color: #474d57;
+    margin-top: 8px;
+    margin-bottom: 24px;
+}
+
 .editProfile-upload-btn, .editProfile-reset-btn {
     box-sizing: border-box;
     display: flex;
@@ -50,6 +68,6 @@
 
 input::placeholder {
     color: #fff;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 500;
 }
