--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -5,12 +5,12 @@
 .landing-hero {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 16px;
 }
 
 .balance, .completed-task, .get-started {
     background-color: #2C3137;
-    width: 300px;
+    width: 33%;
     height: 200px;
     border-radius: 24px;
     box-sizing: border-box;
