--- a/src/components/Reward.css
+++ b/src/components/Reward.css
@@ -133,21 +133,21 @@
 .nftReward {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    gap: 16px;
     margin-bottom: 20px;
 }
 
 .reward-content {
     box-sizing: border-box;
     height: 300px;
-    width: 215px;
+    width: 31%;
     Padding: 0px, 0px, 25px, 0px;
     border-radius: 16px;
     background-color: #2C3137;
 }
 
 .nft-img {
-    width: 215px;
+    width: 100%;
     height: 135px;
     margin-bottom: 16px;
 }
