--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -38,8 +38,9 @@
     display: flex;
     align-items: center;
     gap: 18px;
-    padding: 0 10px;
+    padding-top: 16px;
     padding-left: 35px;
+    padding-bottom: 16px;
     border-radius: 12px;
     cursor: pointer;
 }
@@ -48,17 +49,25 @@
     background: rgba(71, 77, 87, .3);
 }
 
-.link-item.active {
+.link-item.active  {
     background: #474D57;
 }
 
 .link-icon {
     height: 24px;
     width: 24px;
+    opacity: .8;
+}
+
+.link-icon.active {
+    opacity: 1;
 }
 
 .link-name {
+    margin: 0;
     font-size: 16px;
+    font-weight: 600;
+    opacity: .8;
 }
 
 .theme-toggle {
@@ -103,7 +112,7 @@
     margin-top: 16px;
     position: relative;
     background: #FE7B59;
-    background: linear-gradient(#FE7B59, #FE497A, #FD169C);
+    background-image: linear-gradient(107deg, #fe7b59 0%, #fe497a 48%, #fd169c 100%);
     border-radius: 24px;
 }
 
