--- a/src/components/SuggestAds.css
+++ b/src/components/SuggestAds.css
@@ -55,6 +55,7 @@ form {
     border-radius: 8px;
     color: #fff;
     font-size: 16px;
+    font-weight: 500;
     outline: none;
     border: solid 1px #35373e;
     background-color: #2c3137;
