--- a/src/components/Crypto.css
+++ b/src/components/Crypto.css
@@ -52,19 +52,19 @@
 }
 
 .desc-name {
-    margin-right: 226px;
+    margin-right: 150px;
 }
 
 .desc-price {
-    margin-right: 100px;
+    margin-right: 11%;
 }
 
 .desc-24 {
-    margin-right: 55px;
+    margin-right: 8%;
 }
 
 .desc-markrt {
-    margin-right: 93px;
+    margin-right: 95px;
 }
 
 .crypo-item {
@@ -86,9 +86,9 @@
     display: flex;
     align-items: center;
     line-height: 0;
-    width: 168px;
-    margin-right: 91px;
-    margin-left: 80px;
+    width: 150px;
+    margin-right: 70px;
+    margin-left: 60px;
 }
 
 .crypto-img {
@@ -110,25 +110,25 @@
 .crypto-price {
     font-weight: 500;
     font-size: 16px;
-    margin-right: 100px;
+    margin-right: 12%;
 }
 
 .crypto-change {
     font-weight: 500;
     font-size: 16px;
-    margin-right: 100px;
+    margin-right: 9%;
 }
 
 .market-price {
     font-weight: 500;
     font-size: 16px;
-    margin-right: 70px;
+    margin-right: 7%;
 }
 
 .crypto-chart {
     height: 56px;
     width: 110px;
-    margin-right: 60px;
+    margin-right: 3%;
 }
 
 .crypto-btn {
