--- a/src/components/AddSuggestions.css
+++ b/src/components/AddSuggestions.css
@@ -46,8 +46,6 @@
 
 .ad-box-big {
     flex: 2;
-    display: flex;
-    padding: 0 0 0 20px;
     border-radius: 24px;
     background-color: #2793ff;
 }
@@ -58,6 +56,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-left: 38px;
+    width: 50%;
 }
 
 .big-box-content h3 {
@@ -69,8 +69,8 @@
 .big-box-content p {
     font-size: 16px;
     font-weight: normal;
-    margin-bottom: 1rem;
     margin: 0;
+    margin-bottom: 1rem;
 }
 
 .ad-readmore-link {
