--- a/src/components/VotePage.css
+++ b/src/components/VotePage.css
@@ -4,7 +4,7 @@
 
 .voteProject-page {
     width: 285.8px;
-    height: 95vh;
+    height: 1100px;
     border-right: 1px solid rgba(255, 255, 255, .32);
     background-color: #1e2329;
 }
