--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
 }
 
 
+@media screen and (max-width: 1024px) {
+  .sidebar {
+    box-sizing: border-box;
+    width: 96px;
+    padding: 24px 4px;
+  }
+
+  .animated_padding_in {
+    padding-left: 96px;
+    transition: all .2s ease-out;
+  }
+}
