--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,5 +1,3 @@
-
-
 .header {
     display: flex;
     align-items: center;
@@ -24,6 +22,7 @@
 }
 
 .sidebar-items {
+    margin: 0;
     margin-top: 20px;
     display: flex;
     flex-direction: column;
@@ -49,7 +48,7 @@
     background: rgba(71, 77, 87, .3);
 }
 
-.link-item.active  {
+.link-item.active {
     background: #474D57;
 }
 
@@ -155,6 +154,7 @@
     position: relative;
     height: 100%;
 }
+
 /* 
 use react scroll and rap the inner div */
 
@@ -162,3 +162,72 @@ use react scroll and rap the inner div */
     position: absolute;
     bottom: 65px;
 } */
+
+@media screen and (max-width: 1024px) {
+
+    .brand {
+        margin: auto;
+    }
+
+    .brand h3 {
+        display: none;
+    }
+
+    .hamburger {
+        display: none;
+    }
+
+    .link-item {
+        box-sizing: border-box;
+        width: 52px;
+        height: 52px;
+        margin: auto;
+        padding: 10px;
+        margin-bottom: 6px;
+    }
+
+    .link-icon {
+        margin: auto;
+    }
+
+    .link-name {
+        display: none;
+    }
+
+
+    .theme-toggle {
+        box-sizing: border-box;
+        justify-content: flex-start;
+        margin: auto;
+        margin-top: 30px;
+        gap: 8px;
+        height: 32px;
+        width: 75px;
+    }
+    
+    .dark-theme,
+    .light-theme {
+        padding: 0;
+    }    
+
+    .dark-theme {
+        margin: 2px;
+        width: 37px;
+    }
+
+    .dark-theme p,
+    .light-theme p {
+        display: none;
+    }
+
+    .moon,
+    .sun {
+        height: 16px;
+        width: 16px;
+        margin: auto;
+    }
+
+    .advert {
+        display: none;
+    }
+}
