--- a/src/components/MainReward.css
+++ b/src/components/MainReward.css
@@ -39,7 +39,7 @@
 }
 
 .mainr-img {
-    width: 240px;
+    width: 100%;
     height: 160px;
     margin-bottom: 24px;
 }
@@ -122,4 +122,25 @@
     gap: 10px;
     padding: 18px 48px;
     box-shadow: 0 4px 8px 0 rgba(31, 118, 204, 0.4);
+}
+
+@media screen and (max-width: 1024px) {
+    .mainr-content {
+        width: 23.5%;
+        height: 366px;
+    }
+
+    .mainr-img {
+        margin-bottom: 16px;
+    }
+
+    .mainr-desc {
+        font-weight: 400;
+        font-size: 10px;
+    }
+
+    .mainr-market {
+        flex-direction: column-reverse;
+        gap: 24px;
+    }
 }
