--- a/src/components/Reward.css
+++ b/src/components/Reward.css
@@ -2,7 +2,6 @@
     flex: 1;
     margin-top: 30px;
     display: flex;
-    
 }
 
 .reward-gem {
@@ -37,11 +36,11 @@
 }
 
 .card-content {
-    background-color: #2C3137;  
+    background-color: #2C3137;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column; 
+    flex-direction: column;
     height: 180px;
     width: 160px;
     padding: 25px;
@@ -71,6 +70,10 @@
     height: 350px;
     box-sizing: border-box;
     border-radius: 24px;
+}
+
+.referral-Or {
+    text-align: center;
 }
 
 .referral-container h3 {
@@ -113,6 +116,7 @@
     font-size: 14px;
     font-weight: 500;
     margin-right: 15px;
+    margin: 0;
 }
 
 .link img {
@@ -125,7 +129,7 @@
     margin-right: 0;
 }
 
-.socials img{
+.socials img {
     margin-right: 16px;
     cursor: pointer;
 }
@@ -137,6 +141,10 @@
     margin-bottom: 20px;
 }
 
+.nftReward-ipad {
+    display: none;
+}
+
 .reward-content {
     box-sizing: border-box;
     height: 300px;
@@ -144,6 +152,7 @@
     Padding: 0px, 0px, 25px, 0px;
     border-radius: 16px;
     background-color: #2C3137;
+    box-shadow: 0px 24px 50px 0px rgba(0, 0, 0, .4);
 }
 
 .nft-img {
@@ -183,7 +192,7 @@
 .reward-market {
     padding: 0 8px;
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
     margin-top: 5px;
 }
 
@@ -200,7 +209,7 @@
     border-radius: 8px;
 }
 
-.reward-amount p{
+.reward-amount p {
     font-size: 16px;
     font-weight: 500;
 }
@@ -228,4 +237,82 @@
     align-items: center;
     gap: 10px;
     padding: 12px 45px;
+    border-radius: 12pxs;
+}
+
+@media screen and (max-width: 1024px) {
+    .reward-container {
+        flex-direction: column;
+    }
+
+    .nftReward {
+        display: none;
+    }
+
+    .nftReward-ipad {
+        display: initial;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 16px;
+        margin-bottom: 20px;
+    }
+
+    .reward-content {
+        width: 23.5%;
+        height: 366px;
+    }
+
+    .nft-img {
+        height: 161px;
+    }
+
+    .desc {
+        font-size: 10px;
+    }
+
+    .reward-market {
+        flex-direction: column-reverse;
+        gap: 24px;
+    }
+
+    .reward-btn img {
+        display: none;
+    }
+
+    .reward-btn {
+        border-radius: 12px;
+        padding: 14px 29px;
+        margin-bottom: 37.7px;
+    }
+
+    .referral-container {
+        box-sizing: border-box;
+        display: flex;
+        align-items: flex-start;
+        padding: 25px 17px;
+        gap: 40px;
+        width: 688px;
+        height: 142px;
+    }
+
+    .referral-container h3 {
+        margin-bottom: 0;
+    }
+
+    .contact h4 {
+        margin-bottom: 8px;
+    }
+
+    .referral-link {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    .socials img {
+        height: 40px;
+        width: 38px;
+        margin-right: 10px;
+    }
+
 }
