--- a/src/components/IcoProjectAds.css
+++ b/src/components/IcoProjectAds.css
@@ -57,3 +57,27 @@
     font-weight: 800;
     font-size: 16px;
 }
+
+@media screen and (max-width: 1024px) {
+    .icoproject-item {
+        height: 200px;
+        min-width: 252.79px;
+    }   
+
+    .icoproject-item-top img {
+        height: 47.5px;
+        width: 47.5px;
+    }
+
+    .icoproject-item-bottom {
+        margin-top: 27px;
+    }
+
+    .icoproject-item-bottom P {
+        font-size: 10.18px;
+    }
+
+    .icoproject-item-bottom h3 {
+        font-size: 14px;
+    }
+}
