--- a/src/components/Cryptocurrency/Bitcoin/BtcStats/BtcStats.module.css
+++ b/src/components/Cryptocurrency/Bitcoin/BtcStats/BtcStats.module.css
@@ -1,11 +1,11 @@
-.stat-container {
+.stat__container {
     padding: 30px 13px;
     background-color: #2c3137;
     width: 35%;
     border-radius: 18px;
 }
 
-.stat-container h3 {
+.stat__container h3 {
     margin-bottom: 20px;
     font-size: 18px;
     font-weight: bold;
@@ -25,13 +25,13 @@
     align-items: center;
 }
 
-.p-change {
+.change__p {
     font-size: 12px;
     font-weight: normal;
     margin-right: 4px;
 }
 
-.change-24 {
+.change__24 {
     font-size: 7.4px;
     font-weight: normal;
     background-color: #2793ff;
