--- a/src/components/Cryptocurrency/Bitcoin/Review/Review.module.css
+++ b/src/components/Cryptocurrency/Bitcoin/Review/Review.module.css
@@ -1,4 +1,5 @@
 .review {
+    flex: 1;
     padding: 30px 10px 20px 10px;
     border-radius: 24px;
     background-color: #2c3137;
@@ -35,28 +36,37 @@ textarea::placeholder {
     color: #fff;
 }
 
-.review-item {
+.review__item {
     background-color: #41464B;
     padding: 16px;
     margin-bottom: 16px;
     border-radius: 12px;
 }
 
-.review-top {
+.review__itemTop {
     display: flex;
     justify-content: space-between;
 }
 
-.profile img {
+.review__profile {
+    display: flex;
+    align-items: center;
+}
+
+.review__profile img {
     margin-right: 6px;
 }
 
-.review-name {
+.review__profileDetail {
+    line-height: .1;
+}
+
+.review__name {
     font-size: 16px;
     font-weight: 700;
 }
 
-.review-username, .review-time, .review-proper {
+.review__username, .review__time, .review__proper {
     font-size: 12px;
     font-weight: 400;
 }
@@ -68,12 +78,12 @@ textarea::placeholder {
     margin-bottom: 22.5px;
 }
 
-.reviewIpad-container {
+.reviewIpad__container {
     display: flex;
     gap: 64px;
 }
 
-.reviewIpad-textarea {
+.reviewIpad__textarea {
     flex: 1;
     background-color: #2C3137;
     height: fit-content;
@@ -82,6 +92,12 @@ textarea::placeholder {
     border-radius: 24px;
 }
 
-.reviewIpad-items {
+.reviewIpad__items {
     flex: 1;
+}
+
+@media screen and (max-width: 1024px) {
+    .review {
+        display: none;
+      }
 }
