--- a/src/components/Cryptocurrency/Bitcoin/Roadmap/Roadmap.module.css
+++ b/src/components/Cryptocurrency/Bitcoin/Roadmap/Roadmap.module.css
@@ -1,11 +1,11 @@
-.timeline-area {
+.timeline__area {
     margin: 90px auto;
     width: 500px;
     border-left: 2px solid #68F588;
     padding: 0 40px;
 }
 
-.timeline-event {
+.timeline__event {
     background-color: #2c3137;
     box-shadow: 0 24px 50px 0 rgba(0, 0, 0, 0.5);
     border-radius: 16px;
@@ -14,14 +14,14 @@
     position: relative;
 }
 
-.timeline-event p {
+.timeline__event p {
     margin: 0;
     padding: 25px 32px 33px 33px;
     font-size: 16px;
     font-weight: 400;
 }
 
-.timeline-event:before {
+.timeline__event:before {
     content: "";
     display: block;
     width: 16px;
@@ -33,7 +33,7 @@
     left: -49px;
 }
 
-.timeline-event:after {
+.timeline__event:after {
     content: "";
     width: 0;
     height: 0;
@@ -45,13 +45,13 @@
     top: 24px;
 }
 
-.map-date {
+.map__date {
     font-size: 16px;
     font-weight: 500;
     margin-bottom: 7px;
 }
 
-.map-h3 {
+.map__h3 {
     font-size: 24px;
     font-weight: 600;
     margin-bottom: 16px;
