--- a/src/components/Home/Landing.module.css
+++ b/src/components/Home/Landing.module.css
@@ -1,14 +1,14 @@
-.landing-container {
+.landing__container {
     margin: 30px;
 }
 
-.landing-hero {
+.landing__hero {
     display: flex;
     align-items: center;
     gap: 16px;
 }
 
-.balance, .completed-task, .get-started {
+.balance, .completed__task, .get__started {
     background-color: #2C3137;
     width: 33%;
     height: 200px;
@@ -17,55 +17,58 @@
     padding: 10px;
 }
 
-.account-bal {
+.account__bal {
     padding: 0px 27px 0;
     font-weight: 600;
     font-size: 16px;
 }
 
-.balance-detail, .completed-task{
+.balance__detail, .completed__task{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
 
-.balance-detail img {
+.balance__detail img {
     height: 40px;
     width: 40px;
     margin-bottom: 6px;
 }
 
-.balance-detail h3, .completed-task h3 {
+.balance__detail h3, .completed__task h3 {
     font-size: 40px;
     font-weight: 800;
 }
 
-.balance-detail p, .completed-task p {
+.balance__detail p, .completed__task p {
     margin: 0;
     font-size: 14px;
     font-weight: 400;
 }
 
-.completed-task img {
+.completed__task img {
     height: 48px;
     width: 48px;
     margin-bottom: 15px;
 }
 
-.get-started {
+.get__started {
     padding-top: 50px;
     padding-left: 30px;
+    background-image: url('../../data/nftgrid.png');
+    background-size: cover;
+    background-position: center;
 }
 
-.get-started h3 {
+.get__started h3 {
     font-size: 24px;
     font-weight: 800;
     line-height: 1.1;
     margin-bottom: 16px;
 }
 
-.landing-ad {
+.landing__ad {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -73,9 +76,12 @@
     margin-top: 33px;
     padding: 33px 28px;
     border-radius: 24px;
+    background-image: url('../../data/pink.png');
+    background-size: cover;
+    background-position: center;
 }
 
-.landing-ad h3 {
+.landing__ad h3 {
     width: 333px;
     font-size: 24px;
     font-weight: 800;
@@ -83,7 +89,7 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .get-started h3 {
+    .get__started h3 {
         font-size: 21px;
         line-height: 1.2;
     }
