--- a/src/components/Tasks/DailyTask.module.css
+++ b/src/components/Tasks/DailyTask.module.css
@@ -1,14 +1,14 @@
-.task-container {
+.task__container {
     margin: 30px;
 }
 
-.task-title {
+.task__title {
     font-size: 32px;
     font-weight: 800;
     margin-bottom: 30px;
 }
 
-.task-title.more {
+.task__title.more {
     margin-top: 90px;
     font-weight: 800;
     font-size: 24px;
@@ -20,74 +20,72 @@
     margin-bottom: 40px;
 }
 
-.task-img {
+.task__img {
     height: 80px;
     width: 80px;
     margin-right: 20px;
 }
 
-.airdrop {
+.task__airdrop {
     display: flex;
     flex-direction: column;
     margin-right: 100px;
 }
 
-.airdrop h3 {
-    margin: 0;
-    padding: 0;
+.task__airdrop h3 {
     font-weight: 800;
     font-size: 18px;
 }
 
-.airdrop p {
+.task__airdrop p {
     margin: 0;
     padding: 0;
     font-weight: 500;
     font-size: 16px;
 }
 
-.diamond-count {
+.task__diamond {
     display: flex;
     align-items: center;
 }
 
-.diamond-count img {
+.task__diamond img {
     height: 32px;
     width: 32px;
     margin-left: 90px;
     margin-right: 8px;
 }
 
-.diamond-count h3 {
+.task__diamond h3 {
     font-size: 24;
     font-weight: 600;
 }
 
 @media screen and (max-width: 1024px) {
-    .task-title {
+    .task__title {
         font-size: 24px;
     }
 
-    .task-img {
+    .task__img {
         height: 64px;
         width: 64px;
         margin-right: 16px;
     }
 
-    .airdrop {
+    .task__airdrop {
         margin-right: 90px;
     }
 
-    .airdrop h3 {
+    .task__airdrop h3 {
         font-size: 16px;
     }
 
-    .airdrop p {
+    .task__airdrop p {
         font-size: 12px;
         font-weight: 400;
     }
 
-    .diamond-count img {
+    .task__diamond img {
         margin-left: 90px;
     }
 }
