--- a/src/components/Vote/VotePage/VotePage.module.css
+++ b/src/components/Vote/VotePage/VotePage.module.css
@@ -1,15 +1,15 @@
-.votepage-container {
+.votepage__container {
     display: flex;
 }
 
-.voteProject-page {
+.voteProject__page {
     width: 285.8px;
     height: 1100px;
     border-right: 1px solid rgba(255, 255, 255, .32);
     background-color: #1e2329;
 }
 
-.voteProject-title {
+.voteProject__title {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -18,7 +18,7 @@
     margin-bottom: 6px;
 }
 
-.voteProject-h3 {
+.voteProject__titleH3 {
     font-size: 21px;
     font-weight: 800;
 }
@@ -32,11 +32,11 @@
     cursor: pointer;
 }
 
-.voteContent-page {
+.voteContent__page {
     flex: 3;
 }
 
-.voteContent-zero {
+.voteContent__zero {
     height: 95vh;
     display: flex;
     align-items: center;
@@ -44,7 +44,7 @@
     flex-direction: column;
 }
 
-.voteContent-zero p {
+.voteContent__zero p {
     margin: 0;
     margin-top: 16px;
     width: 35%;
@@ -53,7 +53,7 @@
     text-align: center;
 }
 
-.voteNft-container {
+.voteNft__container {
     display: flex;
     align-items: center;
     gap: 25px;
@@ -78,7 +78,7 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .voteProject-page {
+    .voteProject__page {
         height: 1900px;
     }
 }
