--- a/src/components/AdSuggestion/AdSuggestionForms/SuggestAds/SuggestAds.module.css
+++ b/src/components/AdSuggestion/AdSuggestionForms/SuggestAds/SuggestAds.module.css
@@ -1,19 +1,19 @@
-.suggestAd-container {
+.suggestAd__container {
   margin: 50px;
 }
 
-.suggestAd-span {
+.suggestAd__span {
   display: flex;
   align-items: center;
   gap: 20px;
   margin-bottom: 35px;
 }
 
-.suggestAd-span img {
+.suggestAd__span img {
   cursor: pointer;
 }
 
-.suggestAd-span h3 {
+.suggestAd__span h3 {
   font-weight: 800;
   font-size: 32px;
 }
@@ -25,7 +25,7 @@
   margin-bottom: 16px;
 }
 
-.suggestAd-buttons {
+.suggestAd__buttons {
   display: flex;
   gap: 8px;
   margin-bottom: 77px;
@@ -36,12 +36,12 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .suggestAd-span img {
+  .suggestAd__span img {
     height: 26.67px;
     width: 26.67px;
   }
 
-  .suggestAd-span h3 {
+  .suggestAd__span h3 {
     font-size: 24px;
   }
 
