--- a/src/components/AdSuggestion/CryptoProjectAd/CryptoProjectAd.module.css
+++ b/src/components/AdSuggestion/CryptoProjectAd/CryptoProjectAd.module.css
@@ -1,9 +1,28 @@
-.cryptoAd-container {
+.cryptoAd__container {
     margin-left: 45px;
     margin-bottom: 72px;
 }
 
-.cryptoAd-item {
+.cryptoAd__title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 32px;
+    margin-right: 45px;
+}
+
+.cryptoAd__title h3 {
+    font-weight: 800;
+    font-size: 24px;
+}
+
+.cryptoAd__arrows {
+    display: flex;
+    gap: 1rem;
+    cursor: pointer;
+}
+
+.cryptoAd__item {
     box-sizing: border-box;
     position: relative;
     width: 25%;
@@ -14,19 +33,19 @@
     background-color: #2c3137;
 }
 
-.cryptoAd-carousel {
+.cryptoAd__carousel {
     overflow: hidden;
     cursor: grab;
 }
 
-.cryptoAd-inner-carousel {
+.cryptoAd__carouselInner {
     display: flex;
     gap: 16px;
     height: 145px;
     align-items: flex-end;
 }
 
-.cryptoAd-top {
+.cryptoAd__top {
     position: absolute;
     transform: translate(-65%);
     top: -15%;
@@ -37,30 +56,30 @@
     align-items: center;
 }
 
-.cryptoAd-top p {
+.cryptoAd__top p {
     margin: 0;
     font-size: 12px;
     font-weight: 800;
 }
 
-.cryptoAd-top img {
+.cryptoAd__top img {
     pointer-events: none;
 }
 
-.cryptoAd-info {
+.cryptoAd__info {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 35px;
 }
 
-.cryptoAd-info p {
+.cryptoAd__info p {
     font-size: 10px;
     font-weight: 500;
     margin: 0;
 }
 
-.cryptoAd-info h3 {
+.cryptoAd__info h3 {
     font-size: 12px;
     font-weight: 800;
     background-image: linear-gradient(109deg, #43cbff 0%, #9708cc 100%);
@@ -69,12 +88,20 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .cryptoAd-top img {
+    .cryptoAd__top img {
         height: 47.5px;
         width: 47.5px;
     }  
     
-    .cryptoAd-top {
+    .cryptoAd__top {
         top: -10%;
+    }
+
+    .cryptoAd__arrows {
+        display: none;
+    }
+
+    .cryptoAd__title h3 {
+        font-size: 21px;
     }
 }
